# ocaml-allegro

./: .gitignore  LICENSE.txt  META  Makefile  README.txt  alleg-wrap.c  allegro.ml  allegro.ml.cpp  allegro.mli  allegro.opam
examples/: Makefile  exhello.ml
